compiler/plc_driver/src/tests/snapshots/plc_driver__tests__external_files__external_file_function_call.snap
---
source: compiler/plc_driver/src/tests/external_files.rs
expression: "results.join(\"\\n\")"
---
; ModuleID = 'main.st'
source_filename = "main.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i16 @main() {
entry:
  %main = alloca i16, align 2
  store i16 0, i16* %main, align 2
  %call = call i16 @external()
  %main_ret = load i16, i16* %main, align 2
  ret i16 %main_ret
}

declare i16 @external()

; ModuleID = 'external.st'
source_filename = "external.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

declare i16 @external()

; ModuleID = '__init___TestProject'
source_filename = "__init___TestProject"
target datalayout = "[filtered]"
target triple = "[filtered]"

@llvm.global_ctors = appending global [1 x { i32, void ()*, i8* }] [{ i32, void ()*, i8* } { i32 65535, void ()* @__init___TestProject, i8* null }]

define void @__init___TestProject() {
entry:
  ret void
}
